test/sema/negative/string.impala
fn main() -> () {
    let s = "\g";
}
