test/sema/negative/string.out
string.impala:2 col 13 - 16: error: unknown escape sequence '\g'
